# ChangeLog for dev-libs/leveldb
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/leveldb/ChangeLog,v 1.15 2013/08/29 01:25:20 patrick Exp $

*leveldb-1.13.0 (29 Aug 2013)

  29 Aug 2013; Patrick Lauer <patrick@gentoo.org> +leveldb-1.13.0.ebuild:
  Bump

*leveldb-1.12.0 (20 Jun 2013)

  20 Jun 2013; Patrick Lauer <patrick@gentoo.org> +leveldb-1.12.0.ebuild:
  Bump

*leveldb-1.11.0 (19 Jun 2013)

  19 Jun 2013; Patrick Lauer <patrick@gentoo.org> +leveldb-1.11.0.ebuild:
  Bump

  11 Jun 2013; Sébastien Fabbro <bicatali@gentoo.org> leveldb-1.10.0.ebuild:
  Keyword amd64-linux and x86-linux

*leveldb-1.10.0 (22 May 2013)

  22 May 2013; Patrick Lauer <patrick@gentoo.org> +leveldb-1.10.0.ebuild:
  Bump

  14 May 2013; Agostino Sarubbo <ago@gentoo.org> leveldb-1.9.0-r5.ebuild:
  Stable for arm, wrt bug #469342

  14 May 2013; Agostino Sarubbo <ago@gentoo.org> leveldb-1.9.0-r5.ebuild:
  Stable for x86, wrt bug #469342

  14 May 2013; Agostino Sarubbo <ago@gentoo.org> leveldb-1.9.0-r5.ebuild:
  Stable for amd64, wrt bug #469342

*leveldb-1.9.0-r5 (13 Apr 2013)

  13 Apr 2013; Mike Frysinger <vapier@gentoo.org>
  +files/leveldb-1.9.0-configure.patch, +leveldb-1.9.0-r5.ebuild,
  -leveldb-1.9.0-r3.ebuild, metadata.xml:
  Rewrite from scratch to fix innumerable errors.

*leveldb-1.9.0-r3 (26 Mar 2013)

  26 Mar 2013; Patrick Lauer <patrick@gentoo.org> +leveldb-1.9.0-r3.ebuild,
  -leveldb-1.9.0-r1.ebuild, -leveldb-1.9.0-r2.ebuild:
  Adding snappy dep #463218

*leveldb-1.9.0-r2 (11 Mar 2013)

  11 Mar 2013; Patrick Lauer <patrick@gentoo.org> +leveldb-1.9.0-r2.ebuild:
  Fixing header installation #454648

  19 Feb 2013; Anthony G. Basile <blueness@gentoo.org> leveldb-1.9.0-r1.ebuild:
  Keyword ~arm for net-p2p/bitcoin{d,-qt}

*leveldb-1.9.0-r1 (31 Jan 2013)

  31 Jan 2013; Patrick Lauer <patrick@gentoo.org> +leveldb-1.9.0-r1.ebuild,
  -leveldb-1.9.0.ebuild:
  Adding libmemenv for #454648
