@@ -3,11 +3,13 @@ DIST leveldb-1.10.0.tar.gz 204270 SHA256 84a4ab34671e1271d895f093932f8c8cfecb45b
 DIST leveldb-1.11.0.tar.gz 205413 SHA256 f2eaffcb60d6368088a7ef0c2b889132ea42483fed541a7601fa22e54a8839ac SHA512 2b01227d3339d5ab09a6488e43f4b92f1c8f23d9d9b3a1636710aadfebb2a291622b83d636c96314a651f7a774ec39b404490dcf7cd4ac6ec2997d5d651582aa WHIRLPOOL 410e0433a3eaabc838af22e6667c07e639c64da0143cc4af4ca88bb44dc74dabd749e90d2bb5766a448d8c0e952f7a099a593a558eb89cf43cab4f0404cd6ad1
 DIST leveldb-1.12.0.tar.gz 205436 SHA256 a50b44bcae9680c2872081df98395a34a1ac3162ea41f646676e53fb5f691108 SHA512 b0798ecc598a7dcee38887867521face02b11ec93bc55e28fb3e1e16fb9c4d2068564f7779849a0dc0d758ee9665c2297c004947bedd149e392c129fc39a921f WHIRLPOOL 834777dfa5f7e6ecfd1360185ac31389d8e2c92679f496f6925b902caccb42fa05523016bbb6908ffe2ad8c543d2c14f7913a79384f5e8aa05a75efd5be58cc4
 DIST leveldb-1.13.0.tar.gz 207718 SHA256 083497a48ff54a3470ab5085730306a536013c0db54db6854bd9c8638c4f33f7 SHA512 f7fd7421a0c00fadae44cae4be8a473a8827472229bf95aed0642401943f4fdf3d14026270dce59cd7bda2b2a2856d92c253a360c80ea8188a3fb52985b7e3e9 WHIRLPOOL a30a26bb40cf2573f5b135bbb28761f49ade8b478c5862462ce37b875d16802d01c2801353ec418db19d2f55c65fa3ef7e4fa63afaf4f3926dd19b471bc56487
+DIST leveldb-1.14.0.tar.gz 208282 SHA256 9122d2c248ba40d6ce46d0c3e4738fcfa941d0d93fdba20a101471a98e8b00a3 SHA512 c8dc837b77b7aa0be4fca03f31061685534d4280c59b929e5c3e7ef9ceb29e7ea75f8836a55c9df49cd3bc67143d91a2512fc5d9a181f440ec4961a256c77108 WHIRLPOOL 445589cb1f6f540a5a0cc395907f04bb785ea98441d6c9ea19eee6888ebbcc659cf9b9a44a87693336b9cf14a0645de43c0761ad9aafadbd33f157ef05687a6e
 DIST leveldb-1.9.0.tar.gz 203872 SHA256 b2699b04e5aba8e98382c4955b94725d1f76bd0b5decd60c5628205b717a1d4f SHA512 47b0a3272eef2d677ddeb8d0c973e59a1be4bff580528c3bc3f83a654f41485ecc86892d9124ce21ef747c220f98cdad687436849dc978adfd42f8c8c05b9160 WHIRLPOOL 301ba45968095420ff72da36f128bd916d4e039385270eecd8e077aac3781ed12931c9a7d426842e197fd62a99ad6477e5eabbca7524fcba2a185a702f4ef22a
 EBUILD leveldb-1.10.0.ebuild 1332 SHA256 be6fe511efc53728ee88ae77570cf6648f778cef924136c6ca3cc671a053cecf SHA512 38e0d86dadb4b78f736d22cead7a172d099d2fee95dd7d6a0af035eafc59d798813aa57da06f4647efa4fb80dfab45d55012d0f61499c5ba1256dbc95a484063 WHIRLPOOL 337090add18767c7842d6c55d5a0054370992c852f2827f9f6966b938be87ef36006c6dfe487aee4656af915231db4f6619b876bc6ad88b86eefefe3d00752ac
 EBUILD leveldb-1.11.0.ebuild 1331 SHA256 e3de0ec925932c6b3ad5258a1f0f55481ceb2518493630989b537d4806ca793d SHA512 b4563b0e19600c154ae9aac1fc9151bc596532f610ff7d584ca4ff84688c184d139a12deec1b4f640f15d2b0ca11dfc49c62ebb21fc8a34befe55f77b13066e4 WHIRLPOOL a706adf4fca65b3971476fd1de07043305a54666be03f46c644d706adc635fdd57f03a944250441c9b9d17eba60a3410b045787b1a6243081e4f1202a8002a72
 EBUILD leveldb-1.12.0.ebuild 1331 SHA256 e99523900a5681ba7709425cd280d4954fe97ecf74e5e320491122330164c1e9 SHA512 e7510a14bcba9f01346afc6228b1e692ff0aa8649096cf001246d153cdf9e3a9525e03c96f1cb9707d4450ece2c235da854822306f2fa65f750d89cafb6e808d WHIRLPOOL 812597ae8d43df2bded603fe8ceeb73235854e6e234aaf9ef61b2bbce508264e106c4a70123c9d1c097b647b72b2e99f02126231f77394d46a6ea26d4fe1e66f
 EBUILD leveldb-1.13.0.ebuild 1331 SHA256 736c3f6f533fe874b14050eb8b76fa1302a349380c19dfa4d8c8ea1ed61002fe SHA512 f12b89e496fc531a815c196cd516cbbcb2fa2f8038aeb2bff7135468dbdc5815e4b80b39d27c2b032f997bf9ad778e461202157b2bd6c1bf56f1dc05b349aa9e WHIRLPOOL 4255ed95d54d3230f64ed42902214d2673527a1740edd7d1dee220f1ef5bd8504b9eb58bd4a6a97b3affbce13172a7e188328563b8157df164bdde22e24389b4
+EBUILD leveldb-1.14.0.ebuild 1331 SHA256 79c3a2913c0b72170c7248989ec05cdc77ddfed35b38b09b169e574ccc3c9ce4 SHA512 39b52f2c71ff08e6ca84e5ecb7c17790a070ab0786067ffd99e9a80a0a825da82036e1c0b46a3f16f1afa593733e294ce55efd632e74a1ec9ec8d9fa6f0486c9 WHIRLPOOL 24793edf1d7cbee02b21c8ade5ca229067f49c18cf8ae305da466a1974542ab70fc38ada1205aef7a8a4f999e3d70d9982c21777b96f9b5037aba8a1f68ebb1c
 EBUILD leveldb-1.9.0-r5.ebuild 1322 SHA256 b0110c5ab60f7042c8e33f090a94b93c7900607f2e7773f6a0abd494f53f6071 SHA512 0ca565fb96b055a7fa50e9d00ff7ce9bac72f14101d5d1b273fbd8d8cd536bf935a2f9c39c8c023ae9a51b036db884dd6937d4a10b673fbfddb29d13939232a0 WHIRLPOOL 28efb36b01995f24aa04146b401a8cf8258538fd84a2ce696f251e36aabe41c910e4c93dd0d95b8f5956002b9bdcfd903832d7b580cb8595b9bc3bf6ad95dacb
-MISC ChangeLog 2218 SHA256 9498b9315447f3ac96dd0e7d5606e0a6a2fbd763ab480aabad7bd82e98ebf347 SHA512 f7d53b9f34342fffffed0e3a5b913e51909d4bdab33e804c881643bd298882c0a2057a9f645cdfc5ee6e5db53ce6f142611a2962ad45a87a450dc5a30ecab1d4 WHIRLPOOL 34bcafb28f81e38de5de0d5dc3e5e1399c1aed2bac5a350e8cacb11e21685e203bc32b4a2683e440b3b57eec5a2b4c69c23ae995cfe38daec429892ab391be82
+MISC ChangeLog 2331 SHA256 4a022748c8983427d4c5eaf39c30f9e579bc6fb4706770ac65df0910e33d3d50 SHA512 19195c7e9de2132ad6e3c97cde609c8d6254b54fff6bc7f2b6c3de8b1ead49b481650f2de03090b677badbcd281e336e42be49c538e2f1c809d97e0df1a3aa00 WHIRLPOOL c62b5ac9bfe293e87719953a6373f36fb0a5099ef076b6bffd42dbcef99c133b3e15c41bfef599ee6ca206ad02781378a5363fe5d75bd72af1e4eaa7fa686f1d
 MISC metadata.xml 316 SHA256 aa2f1474541fc5a99a65dc0b6660cb6738bd9b147d988dab61aa84e1e7284004 SHA512 c7efdc1ef3d47b68061968e2794b26e06655f7d8d95a2f06c251d14fb0a93f42c9277b4714807e6d9281867e97bb0f1e2e51632ba41d4456e8d81bbf11baab2c WHIRLPOOL 75ee0f94e506c13c10b1557cf7ac3db73aff8e518785e8620fb6466f347ec0006870858d5e1862fc0a83d6154a3da6223a4db6d671875857191ec43395d05e92
