@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install test
+DEPEND=tcmalloc? ( dev-util/google-perftools ) snappy? ( app-arch/snappy static-libs? ( app-arch/snappy[static-libs] ) )
+DESCRIPTION=a fast key-value storage library written at Google
+EAPI=4
+HOMEPAGE=http://code.google.com/p/leveldb/
+IUSE=+snappy static-libs +tcmalloc
+KEYWORDS=~amd64 ~arm ~x86 ~amd64-linux ~x86-linux
+LICENSE=BSD
+RDEPEND=tcmalloc? ( dev-util/google-perftools ) snappy? ( app-arch/snappy static-libs? ( app-arch/snappy[static-libs] ) )
+SLOT=0
+SRC_URI=http://leveldb.googlecode.com/files/leveldb-1.14.0.tar.gz
+_eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=bb72d10512650ee6b78889057f2a7c3f
