@@ -14,16 +14,26 @@ EBUILD xcb-proto-1.7.1.ebuild 1052 SHA256 ae528efb8f628dcd9eb6c1b3568a33e21622c5
 EBUILD xcb-proto-1.7.ebuild 1102 SHA256 76f08f91c67abf9cff9baccb2621c68fd02e6061572f941acb4715863ecaad86 SHA512 74fe1243e48931f9c6cbb3bb5bf77062344fa21ab4d08a3c71c23339511b5a707ea1e6b3a9c2fb4202f1dcd7264bd3efed6ddbe44d98cd3827cc4ea55fe9bea9 WHIRLPOOL d47ba6bf4eb84df698d7ab8a2b0042e7056d8df3f37c6adf0ec59702894c9ad716e345f4492f9df0ac5f9644e1229e8a5b12fc6d8128fd97fedd207ed2e92eb0
 EBUILD xcb-proto-1.8-r1.ebuild 1032 SHA256 d6183822b66858926a834961841b7199427e6a81298d6acce6a1317a87480b29 SHA512 872fa5fa1aeda29c30c9f049a9f17103df9554264a54f1e13ecec9b5f381269f4987865f8852870e242783e17d1384c3e24661dabe5a880df37d804897af4b78 WHIRLPOOL 4d318015bcfd0c935c45a70bdd6ddccade2369d909b57a4c5c7d8f610380ac802fdf08e9137265251ac2e0da2b209f494bf8cce4ed739fe4174b4a94edb009d9
 EBUILD xcb-proto-1.8-r2.ebuild 1060 SHA256 78c03f728deae62d97010bac6e452eeca795601fce55449f010f87318c68a2e4 SHA512 445742ee978ab78066eb38d347b3eafebf91c53ac1ac8b63848eb2fabf1b4f2f5b769bfa75d4c1c41d9b369e204a1c5aa423de2ff318654ab757ba8c08b9b77f WHIRLPOOL 3e9ba2fb0711ffe63247e4dbc7912651b23fcd0636ac59a12e25b1273de48bf417892b8c7d1ffb559c3232e473e6b0b82340b59d886fc9c77577712562be0655
-EBUILD xcb-proto-1.8-r3.ebuild 1466 SHA256 a36bec5187450457019b361de29891f4e4250469e8d659e0b69ebec81eadba3e SHA512 94308f4dc05fb2bf47b5e011878cc16498ff64dc7ed26f8096d6dacf4760e1b46b3a66f6b6b393cfdddfc3b91385d2b1dff10c6135a45312b6f0910b44db1035 WHIRLPOOL 45bebe68df00e3d1853688e7eba3a7e1a282e3aeaab5246e569d60252a37576b4e4a9dec32978d9f753a7757148dcd4ee90f2a226c9c57fb619bf0311807dee2
+EBUILD xcb-proto-1.8-r3.ebuild 1473 SHA256 76a19513c96ecd56fd7cfdc0aefe3e443a0bbabea27c3a54ce5dc145e52e140c SHA512 fd6d667cb4654bd22a71ae1ab0baa6eef1c6a5ad04df871b989aabd83bb827f987a008f4d172653e26d9954b7203b4d9895d7659c5a34f06cbb076ba8f2c394b WHIRLPOOL 187146869ec89351ba2c8452d0a107f0649349e9d53147ae0caf2931698fa35c8c63cdd5832293100ba58cc3bcb4424b6ef723fce129dfcd3510580d431e14b6
 EBUILD xcb-proto-1.8.ebuild 1062 SHA256 3f185d24651463b3fa86e5f88face6f51e824798cd6e10ec16f9255e25f07ca2 SHA512 0a97ee0cb879f3f98f8d6c1ae47111091f053486a5756da782799160cc9048e1a4677f1f626de1dde75f3a1da0c51dbaa4e0e65e8570a820822a1833b5b86550 WHIRLPOOL f1f82618e4fd6d5ee866007947b396e8faa0060b57c9389c1c85fe41fb7e08049a4c0fe7bfe8d96ba5b993585ce6e0f7983f2aee11418cb74c554fcd81ba457b
-MISC ChangeLog 13363 SHA256 d7b7032d78ab1013583561941dc9b05db33af0a50a2a9ac3f5d7579f2418c5a5 SHA512 360fb78b619ee9459e47cae652534d0dc428a146e79d2857cc8a26b322bf29921aa1994d6c89a4977db628698b8a23af96a13b0fbec9949fc6169e8a67721fad WHIRLPOOL 1bd4f882cc4fdb61b1bee9f9a1d2fb366a90afb3e7240395ba662d48143b85f6574a2eb738ef31497b211a99ef7e3ab63ad0f27c1b3700039fea577f0a2126ec
+MISC ChangeLog 13478 SHA256 10431f5b4fa422e2f5cb7c43d8e125ba8f77971d7bf7393955bd00c115f04f4d SHA512 dbaecb67a9610d1bd16aae9d944d54a64a28da0f2552b991ba74d12a50c91a4780aafea214bb82b97f175e9f4510704bbf6704a009524f1f48a65400681e1f40 WHIRLPOOL b7997e6ac0e82c375f93fce50fa1e0c2572f18eb5b36940b2cce64c7435a1050f290305663f6c7478340893b2b2c383db06eb204652b6d5547678fc77740b297
 MISC metadata.xml 156 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055 SHA512 daa9bb2a9b1a16220327bc394f10d93a1a8a427bfbed8808cd247c1dfd5a5b87a4945d55d8243e07fede2c8182a208c618ebd483773d77e9d23862ec77016019 WHIRLPOOL 691e028648bb8b60771d74ef718c51fdb0f4a587e984f6ac4c13d7796415ecf770df2e0fd766399091771924bb65995e9bb290baa35971c56e07d76f2bbf6d93
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.21 (GNU/Linux)
 
-iJwEAQEIAAYFAlI8jV4ACgkQG7kqcTWJkGdPbwQAruFoif8Jq0RNJ5aUzx5HaVig
-tdfyVDnWLMHY2AviuzHLpR8azWJuwU4oRdGDQstjTIFNAjhzi1RsYKMiYhrrLexT
-88Hnp0vHZj48nGne8LBaE4Plt4+9dIX9kQaaZMZoKCsKcjkga5gpRnG7MoJVBdaD
-5vrVtxOnJjXTADbvmYU=
-=iiuw
+iQJ8BAEBCABmBQJSQTjBXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZO0zUQAMTftGMbuy+9Vq8WdD3PVicC
+XUtlB8tKg242wnkz5p7lb+q79qv/QhWa3JZfCy72pYq4M63Uc9u4pWIQAUzeJAva
+sZQkMwk3gKuj1/YQ/z1SuPwvfMhOVuY7cl4CbI7BrTwT9dd8rqDdrWeo949xWYFN
+arte26SXN+nwebUVyJv9pbWpvfLAlCPa65pcl5Ahv/5rsPi9k8gU/7PbYhuVLa7D
+qFtgerILNZm2u+znNyIaNaSwTQToJP+q/Mo755wcyJWoZQ3PwQykllrN+iWGjABs
+lD+hgr16Z5nm23o37BCEKm5crFj8uMLTcPEUXRSLKsOvyse/JNhyAwcKkiZ9UjEo
+OWJB/21kg/iYx9q3I39/aCIxdnnO2DPdaGamYW+jUUqjnq52RR3n6/KWdo+ag67D
+iC2wGCDrbrjHrLQxODkgSOL0ct9SA6fvPxJRyXrzwQWl+1Aeyf1AQJgaogDALM5n
+WKxR0f/SRX4otBM0ltJ22k4kc05OpbJ+AxZtzFSnoDPhxnRYJBUmjxo/fnIR5RTF
+3WYkliyG5pf93h4gBM5FHUoLeqI4CymMde7MhKnqFPT2OLkwec8MM+fagzqcfQf+
+j5HXN6ju4jJDKr/b6Z4vc3ZOHBWe2kXe+CQpkFvuV7Q19tBn782a36QGuq7BBrvm
+fIEu2fW3V8/qYN0ewtuN
+=xI4k
 -----END PGP SIGNATURE-----
