@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-proto/xcb-proto/xcb-proto-1.8-r3.ebuild,v 1.4 2013/09/20 18:00:56 tommy Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-proto/xcb-proto/xcb-proto-1.8-r3.ebuild,v 1.5 2013/09/24 07:00:34 mgorny Exp $
 
 EAPI=5
 
@@ -32,14 +32,14 @@ src_compile() {
 	xorg-2_src_compile
 
 	python_foreach_impl autotools-utils_src_compile -C xcbgen \
-		top_builddir="${WORKDIR}/${P}-${ABI:-DEFAULT_ABI}"
+		top_builddir="${WORKDIR}/${P}-${ABI:-${DEFAULT_ABI}}"
 }
 
 src_install() {
 	xorg-2_src_install
 
 	python_foreach_impl autotools-utils_src_install -C xcbgen \
-		top_builddir="${WORKDIR}/${P}-${ABI:-DEFAULT_ABI}"
+		top_builddir="${WORKDIR}/${P}-${ABI:-${DEFAULT_ABI}}"
 }
 
 pkg_postinst() {
