@@ -1,6 +1,9 @@
 # ChangeLog for x11-proto/xcb-proto
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-proto/xcb-proto/ChangeLog,v 1.112 2013/09/20 18:00:56 tommy Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-proto/xcb-proto/ChangeLog,v 1.113 2013/09/24 07:00:34 mgorny Exp $
+
+  24 Sep 2013; Michał Górny <mgorny@gentoo.org> xcb-proto-1.8-r3.ebuild:
+  Fix missing ${} around DEFAULT_ABI.
 
   20 Sep 2013; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
   xcb-proto-1.8-r3.ebuild:
